--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,11 +6,11 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>MigraineTracking</title>
+        <title>MigraineTracking REST API</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <h1>MigraineTracking</h1>
+        <h1>Directory</h1>
     </body>
 </html>
